--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8080:8080"
     depends_on:
       - qdrant
-      - torchserve
+      - torchserve  
       - redis
       - mongo
     environment:
@@ -22,6 +22,12 @@ services:
 
   qdrant:
     image: qdrant/qdrant
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:6333/health || exit 1"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
 
   redis:
     image: redis:latest
